The families 104,114,124,134 denote the Tawn copula and their rotated versions in the case of left skewness (Tawn type 1).
The families 204,214,224,234 denote the Tawn copula and their rotated versions in the case of right skewness (Tawn type 2).
  
- Bug fix:
  * RVineStructureSelect: Corrected code for the igraph package
  * RVineTreePlot: Now a 3-dimensional R-vine can be plotted too.
  * Corrected upper tail dependence coefficient for the survival BB1 copula (BiCopPar2TailDep)
  * Minor improvment in BiCopSelect regarding the starting values for parameter estimation

- Documentation update


Version 1.1-2 (July 09, 2013)

- Changed dependency from "igraph0" to "igraph" since the support for "igraph0" will be quit soon.

- Additional validy check of the R-vine matrix in RVineMatrix (Code provided by Harry Joe)
  Also available as separate function "RVineMatrixCheck"

- New bivariate copula: Reflection asymmetric Archimedean copula
  In our functions it is "family=41", and 51, 61, and 71 for the rotated versions.
  So far only implemented in some bivariate functions (not documented so far; experimental)

- New author: Benedikt Gr?ler  
  
- Bug fix:
  * New (correct) examples for the Clarke and Vuong test
  * Fixed memory problem in the C-function ktau (TauMatrix)
  

Version 1.1-1 (February 7, 2013)

- Bug fix:
  * Fixed issue with the inverse h-function of the Gumbel copula
  

Version 1.1 (February 4, 2013)

- New functions:
  * BiCopGofTest Goodness-of-fit test for bivariate copulas based on White's information matrix equality as introduced by Wanling and Prokhorov (2011).
    The formally included function BiCopGofKendall is now part BiCopGofTest (method="kendall").

- Additional edge label "pair" in RVineTreePlot to display the indices of the (conditioned) pairs of variables identified by the edges.

- In RVineStructureSelect and RVineCopSelect a truncation level can be set.
